Fixed footer.  Everything is now responsive and aligned properly using Bootstrap5's built-in flexbox functionality.  I also incorporated Google Adsense into the footer

--- a/Frontend/style/select-time-style.css
+++ b/Frontend/style/select-time-style.css
@@ -1,3 +1,10 @@
 .footer-copyright {
-    color: #6D6D6D;
 }
+
+.footer-advertisement {
+    border: 1px #923030 solid;
+}
+
+/* .about-us-link {
+    color: #6D6D6D !important;
+} */
